# SLagSearch

./: .gitignore  CLAUDE.md  GA.py  GA.script  PCA_CHECK.ipynb  README.md  RP3.ipynb  RP3_2.ipynb  SLagSearch.ipynb  SLagSearch_yidi.ipynb  check_gradients.py  cluster_select.py  conftest.py  diagnose_phases.py  find_smooth_submanifold.py  fitness_plots.py  get_restriction.py  gradient_descent.py  helper.py  hermitian_coeffs.py  permute_coeffs.py  plot_3D.py  plot_coord_scatter.py  plot_d1_coeffs.py  plot_hermitian_coeffs.py  plot_histograms.py  plot_pca.py  plots.py  pointcloud_distance.py  points_generation.ipynb  profile_pipeline.py  pyproject.toml  sLagSearch2.py  sharding.py  slag_condition.py  split_clusters.py  submit_chain.sh  symmetry_test.script  test_gradient_descent_small.py  test_permutation_symmetry.py  (+3 more)
diagnostics/: canonicalize_coeffs.py  closest_pair_fs.py  diagnose_phases.py  make_coeffs_truncations.py  permute_coeffs.py  profile_pipeline.py  project_to_symmetric.py  search_bridge_point.py  split_clusters.py  t3_lcs_experiment.py  test_gauge_invariance.py  test_permutation_symmetry.py  test_phase_twist_symmetry.py  test_swap_invariance.py  test_umap_faithfulness.py
docs/superpowers/plans/: 2026-06-24-single-cluster-gd.md
docs/superpowers/specs/: 2026-06-24-single-cluster-gd-design.md
persistent_homology/: cup_product.py  cup_product_selfcheck.py  persistent_homology_cup_length.py  persistent_homology_cup_products.py  persistent_homology_gtda_h0h1.py  persistent_homology_witness.py  persistent_homology_witness_h0h1.py  ph_gtd.script  ph_witness.script
points_gen/: points_gen.script  points_generation.py
symmetry/: canonicalize_coeffs.py  coeffs_to_latex.py  permute_coeffs.py  project_to_symmetric.py  test_permutation_symmetry.py  test_phase_twist_symmetry.py  test_swap_invariance.py
tests/: test_cluster_select.py  test_pointcloud_distance.py
viz/: fitness_pipeline.py  fitness_plots.py  plot_3D.py  plot_coord_scatter.py  plot_gd_history.py  plot_hermitian_coeffs.py  plot_histograms.py  plot_violin.py
volume/: check_normalization.py  compute_volume.py
