[project]
name = "slagsearch"
version = "0.1.0"
description = "Special Lagrangian search in the Fermat quintic Calabi-Yau threefold (GA + gradient descent)."
requires-python = ">=3.12"
dependencies = [
    # Core numerics. JAX 0.10 series; cuda12 extras pull in jaxlib, jax-cuda12-pjrt/plugin,
    # and the nvidia-cu12 wheels. Pinning to the 0.10.x line so a minor bump doesn't break
    # sharding / partitioning APIs we rely on.
    "jax[cuda12]>=0.10,<0.11",
    "numpy>=2.0,<3",
    "scipy>=1.17,<2",
    # Optimizers used by gradient_descent.py (Adam).
    "optax>=0.2.4",
    # Plots.
    "matplotlib>=3.10,<4",
]

[project.optional-dependencies]
# Only needed to (re)generate the input point clouds via points_gen/points_generation.py.
# Day-to-day GA / gradient_descent runs do not need these.
points-gen = [
    "sympy>=1.13",
    "MLGeometry-JAX",
]

# Persistent homology / TDA pipeline (persistent_homology/ folder).
# - Witness-complex Betti numbers via gudhi (persistent_homology_witness.py);
#   JAX (core dep) handles FS distance + max-min landmark selection.
# - Cup-product / cup-length ring structure via ripser cocycles
#   (persistent_homology_cup_length.py): the T^3 vs #(S^1xS^2) discriminant
#   that Betti numbers alone cannot see. cup_product.py is the pure-Python core.
# Install with:   uv sync --extra persistent-homology
persistent-homology = [
    "gudhi>=3.9",
    "ripser>=0.6",
]

# 3D / topology-aware visualization (plot_3D.py). UMAP for 3D embedding,
# kmapper for Mapper graphs, plotly for interactive HTML scatters.
# networkx + scikit-learn are kmapper deps that we also use directly for
# the static PNG, DBSCAN clustering, and the intrinsic_dim estimators.
# Install with:   uv sync --extra viz-3d
viz-3d = [
    "umap-learn>=0.5",
    "kmapper>=2.0",
    "networkx>=3.0",
    "scikit-learn>=1.3",
    "plotly>=5.20",
]

[tool.uv]
# Keep transitive resolution stable across machines.
managed = true
